# B-SEN

./: .gitignore  GETTING_STARTED.md  README.md  README_COMPLETE.md  STATUS.md  UI_COMPLETE.md  UI_DESIGN.md  UI_REDESIGN_SUMMARY.md  VERCEL_SETUP.md  package.json
api/: index.js
backend/: .env.example  package-lock.json  package.json  server.js
backend/models/: Gig.js  User.js
backend/utils/: sorobanInvoke.js
contract/: Cargo.toml  cratesio_soroban_sdk.json
contract/src/: lib.rs
frontend/: .env.example  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/pages/: Home.jsx  MyGigs.jsx  PostGig.jsx  WalletConnect.jsx
